--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <span class="w-3 p-[1px] bg-black my-[1px]"></span>
         </div>
         <div class="searchbtn w-3 h-3 rotate-90">
-          <img class="img" src="/icons/002-search.png" alt="search" />
+          <img class="img" src="./icons/002-search.png" alt="search" />
         </div>
       </div>
       <div class="logo&menu lg:order-1 flex space-x-2">
         <div class="logo w-28 cursor-pointer">
-          <img src="/images/logo.png" alt="Microsoft" />
+          <img src="./images/logo.png" alt="Microsoft" />
         </div>
         <menu class="absolute -left-40 lg:static">
           <ul class="flex flex-col lg:flex-row space-x-5 ml-4">
@@ -75,20 +75,20 @@
           <div class="flex justify-between items-center space-x-2">
             <span class="hidden lg:block cursor-pointer">Search</span>
             <div class="w-4 h-4 cursor-pointer">
-              <img class="img" src="/icons/002-search.png" alt="search" />
+              <img class="img" src="./icons/002-search.png" alt="search" />
             </div>
           </div>
         </div>
         <div class="card flex justify-between items-center space-x-2">
           <span class="hidden lg:block cursor-pointer">Cart</span>
           <div class="w-4 h-4 cursor-pointer">
-            <img class="img" src="/icons/001-shopping-cart.png" alt="card" />
+            <img class="img" src="./icons/001-shopping-cart.png" alt="card" />
           </div>
         </div>
         <div class="account flex justify-between items-center space-x-2">
           <span class="hidden lg:block cursor-pointer">Sign in</span>
           <div class="w-4 h-4 cursor-pointer">
-            <img class="img" src="/icons/003-add-user.png" alt="accounticon" />
+            <img class="img" src="./icons/003-add-user.png" alt="accounticon" />
           </div>
         </div>
       </div>
@@ -101,14 +101,14 @@
           including select Surface. Shop now</a>
       </h1>
       <div class="w-4 h-4">
-        <img class="img" src="/icons/001-next.png" alt="" />
+        <img class="img" src="./icons/001-next.png" alt="" />
       </div>
     </div>
   </section>
   <section class="slider md:bg-[#F2F2F2]">
     <div class="flex flex-col lg:flex-row justify-center items-center mx-auto lg:w-10/12">
       <div class="bnrimg md:w-8/12 lg:w-8/12 w-full">
-        <img class="img" src="/images/sliderbanner.avif" alt="img-1" />
+        <img class="img" src="./images/sliderbanner.avif" alt="img-1" />
       </div>
       <div class="bnrcontent lg:w-10/12 bg-white lg:bg-[#F2F2F2] p-3 lg:pl-10">
         <h2 class="text-2xl font-semibold py-2">Save on Surface</h2>
@@ -183,7 +183,7 @@
       class="flex flex-col md:space-y-0 space-y-2 md:flex-row md:flex-wrap lg:flex-nowrap md:columns-2 py-3 lg:w-9/12 mx-auto">
       <div class="singelcard p-3 md:w-6/12">
         <div class="w-full">
-          <img src="/images/gidimg1.jpg" alt="" class="img" />
+          <img src="./images/gidimg1.jpg" alt="" class="img" />
         </div>
         <h1 class="font-semibold text-xl py-2">
           Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -197,7 +197,7 @@
       </div>
       <div class="singelcard p-3 md:w-6/12">
         <div class="w-full">
-          <img src="/images/gidimg1.jpg" alt="" class="img" />
+          <img src="./images/gidimg1.jpg" alt="" class="img" />
         </div>
         <h1 class="font-semibold text-xl py-2">
           Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -211,7 +211,7 @@
       </div>
       <div class="singelcard p-3 md:w-6/12">
         <div class="w-full">
-          <img src="/images/gidimg1.jpg" alt="" class="img" />
+          <img src="./images/gidimg1.jpg" alt="" class="img" />
         </div>
         <h1 class="font-semibold text-xl py-2">
           Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -225,7 +225,7 @@
       </div>
       <div class="singelcard p-3 md:w-6/12">
         <div class="w-full">
-          <img src="/images/gidimg1.jpg" alt="" class="img" />
+          <img src="./images/gidimg1.jpg" alt="" class="img" />
         </div>
         <h1 class="font-semibold text-xl py-2">
           Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -243,9 +243,9 @@
     <div
       class="gameswrap flex flex-col xl:flex-row-reverse xl:w-9/12 mx-auto my-5 xl:bg-[#1A1A1A] xl:justify-center xl:items-center">
       <div class="gameimg w-full my-5 xl:my-0 h-4/5 overflow-hidden">
-        <img src="/images/smlg.avif" alt="" class="img sm:hidden xl:block" />
-        <img src="/images/md.avif" alt="" class="img hidden sm:block lg:hidden" />
-        <img src="/images/lg.avif" alt="" class="img hidden lg:block xl:hidden" />
+        <img src="./images/smlg.avif" alt="" class="img sm:hidden xl:block" />
+        <img src="./images/md.avif" alt="" class="img hidden sm:block lg:hidden" />
+        <img src="./images/lg.avif" alt="" class="img hidden lg:block xl:hidden" />
       </div>
       <div
         class="gamecontent px-3 lg:w-9/12 mx-auto py-5 shadow-sm shadow-gray-600 xl:shadow-none xl:flex xl:flex-col xl:justify-start xl:text-white pl-20 pr-5 space-y-4">
@@ -274,7 +274,7 @@
       <div class="flex flex-col md:space-y-0 space-y-2 md:flex-row md:flex-wrap lg:flex-nowrap md:columns-2 py-3">
         <div class="singelcard p-3 md:w-6/12">
           <div class="w-full">
-            <img src="/images/gidimg1.jpg" alt="" class="img" />
+            <img src="./images/gidimg1.jpg" alt="" class="img" />
           </div>
           <h1 class="font-semibold text-xl py-2">
             Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -288,7 +288,7 @@
         </div>
         <div class="singelcard p-3 md:w-6/12">
           <div class="w-full">
-            <img src="/images/gidimg1.jpg" alt="" class="img" />
+            <img src="./images/gidimg1.jpg" alt="" class="img" />
           </div>
           <h1 class="font-semibold text-xl py-2">
             Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -302,7 +302,7 @@
         </div>
         <div class="singelcard p-3 md:w-6/12">
           <div class="w-full">
-            <img src="/images/gidimg1.jpg" alt="" class="img" />
+            <img src="./images/gidimg1.jpg" alt="" class="img" />
           </div>
           <h1 class="font-semibold text-xl py-2">
             Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -316,7 +316,7 @@
         </div>
         <div class="singelcard p-3 md:w-6/12">
           <div class="w-full">
-            <img src="/images/gidimg1.jpg" alt="" class="img" />
+            <img src="./images/gidimg1.jpg" alt="" class="img" />
           </div>
           <h1 class="font-semibold text-xl py-2">
             Surface Pro 8 (i5) + Surface Pro Keyboard
@@ -334,8 +334,8 @@
   <section>
     <div class=" mx-auto shadow-sm shadow-gray-600 lg:w-9/12 lg:relative">
       <div class="md:h-[400px] lg:h-[500px] overflow-hidden w-full">
-        <img src="/images/Highlight-.avif" alt="" class="img lg:hidden">
-        <img src="/images/Highlight2.avif" alt="" class="img lg:block hidden">
+        <img src="./images/Highlight-.avif" alt="" class="img lg:hidden">
+        <img src="./images/Highlight2.avif" alt="" class="img lg:block hidden">
       </div>
       <div
         class="p-3 lg:py-10 lg:px-5 space-y-3 pb-5  lg:absolute lg:bg-white lg:w-5/12 lg:top-[50%] lg:right-[50%] lg:translate-y-[-50%]">
@@ -352,9 +352,9 @@
     <div class="lg:w-9/12 mx-auto w-full py-10 flex flex-row space-x-4 items-center justify-center lg:justify-start">
       <p>Follow Microsoft</p>
       <div class="icons flex space-x-3">
-        <img src="/icons/002-facebook-app-symbol.png" alt="" class="w-5 h-5 cursor-pointer">
-        <img src="/icons/003-twitter.png" alt="" class="w-5 h-5 cursor-pointer">
-        <img src="/icons/001-linkedin.png" alt="" class="w-5 h-5 cursor-pointer">
+        <img src="./icons/002-facebook-app-symbol.png" alt="" class="w-5 h-5 cursor-pointer">
+        <img src="./icons/003-twitter.png" alt="" class="w-5 h-5 cursor-pointer">
+        <img src="./icons/001-linkedin.png" alt="" class="w-5 h-5 cursor-pointer">
       </div>
     </div>
   </section>
